# cpython_toy

./: CMakeLists.txt  README.md
doc/: [Object]PyObject.md
src/Object/: PyIntObject.c  PyIntObject.h  PyObject.h  PyStringObject.c  PyStringObject.h  _obj_base_.h  _obj_core_.c  _obj_core_.h
src/test/: PyIntObject_test.c
